# ontodag-fs

./: .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  KICKOFF_PROMPT.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
docs/: USER_GUIDE.md
src/ontodag_fs/: __init__.py  __main__.py  fs.py  index.py  memory.py  ontodag_index.py
tests/: conftest.py  test_cli.py  test_info.py  test_invariants.py  test_listing.py  test_persistence.py  test_readonly.py  test_reserved.py
